# stanford-security-redblue

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: benign_queries.json
data/ground_truth/: labeled_responses.json
data/results/: consolidated_findings.json  precomputed.json
data/sandbox/: data_security_practices.txt  error_log.txt  errors.txt  response.json  response.txt  security_practices.txt
data/seed/: private_records.json  public_notes.json
docs/: EVALUATION_METHODOLOGY.md  THREAT_MODEL.md  relatorio_preliminar.md  resumo_professor.md
src/: __main__.py  demo.py
src/agent/: baseline.py  defended.py  graph_builder.py
src/blue_team/: canary.py  context_separation.py  input_filter.py  instruction_hierarchy.py  output_filter.py  permission_validator.py  semantic_guard.py  spotlighting.py
src/config/: models.py  settings.py
src/core/: llm.py  rbac.py  sandbox.py  state.py  tools.py
src/data/: db.py  schema.py  seed.py
src/evaluation/: ablation.py  agreement.py  benchmark.py  comparison.py  experiments.py  fpr_evaluator.py  full_benchmark.py  loader.py  metrics.py  multi_run.py  precompute.py  reporter.py  runner.py  statistical.py  utility.py
src/red_team/: adaptive.py  attack_templates.py  crescendo.py  executor.py  generator.py  llm_judge.py  scorer.py
src/streamlit_app/: app.py  state.py
src/visualization/: charts.py  terminal.py
tests/: conftest.py
tests/integration/: test_baseline_agent.py  test_defended_agent.py
tests/unit/: test_ablation.py  test_adaptive.py  test_agreement.py  test_attack_templates.py  (+23 more)
(+52 files in other folders)
